htdocs/base.css
/* ... */
.widget-mode
{
    font-size: 0.6em;
}

.widget-main
{
    grid-area: main;
    background-color: Transparent;
    border: none;
    width: inherit;
    outline: none;
    cursor: pointer;
    text-align: -webkit-center;
}

.widget-main > img
{
    max-height: 100%;
}

.widget-main-gauge
{
    grid-area: main;
    width: 100%;
    align-self: center;
}

.widgetMeter
{
    display: grid;
    grid-template-areas:
        'title'
        'main';
    grid-template-rows: 15% 85%;
    grid-gap: 1px;
    box-shadow: 1px 1px 1px 0px var(--shadow);
}

.widgetMeterLinear
{
    display: grid;
    grid-template-areas:
        'title title'
        'main peak'
        'main value';
    grid-template-rows: 15% 15% 70%;
    grid-template-columns: 57% 43%;
    grid-gap: 1px;
    box-shadow: 1px 1px 1px 0px var(--shadow);
}

.widget-main-meter
{
    grid-area: main;
    width: 100%;
    height: 100%;
    align-self: center;
}

.widget-main-meter-lin
{
    grid-area: main;
    height: 100%;
    /*align-self: center;*/
    margin-left: 20%;
}

.widget-main-value-lin
{
    grid-area: value;
    font-size: 1.5em;
    /*text-align: end;*/
    font-weight: bold;
    align-self: center;
}

.widget-main-peak-lin
{
    grid-area: peak;
    font-size: 0.9em;
    font-weight: bold;
    padding-left: 12px;
    overflow: hidden;
    background-color: transparent;
    margin-top: 10px;
    color: red;
    text-align: right;
    margin-right: 5px;
}

.widget-main-meter > canvas
{
    width: 100%;
    height: 100%;
}

.widget-value
{
    grid-area: main;
    display: inline-grid;
    text-align: center;
    font-size: xx-large;
    font-weight: bold;
    align-items: center;
    word-break: break-word;
    color: var(--light4);
}

.widget-ctrl1 { grid-area: ctrl1; }
.widget-ctrl2 { grid-area: ctrl2; }

.widgetCtrl > div > button > img
{
    width: 100%;
    height: 100%;
    object-fit: contain;
}

.widgetCtrl > div > button
{
    height: 100%;
    background-color: Transparent;
    border: none;
    overflow: hidden;
    outline: none;
    cursor: pointer;
}

.widget > button > img
{
    max-width: 100%;
    max-height: 100%;
    justify-self: center;
}

.widgetGauge > button > img
{
    max-width: 100%;
    max-height: 100%;
    background-color: var(--light1);
    justify-self: center;
}

.scale-text
{
    text-align: center;
    font-size: 3.0em;
    fill: white;
}

.gauge-value
{
    text-align: center;
    fill: white;
}

.widgetGauge path
{
    stroke-width: 55;
    stroke: #ecf0f1;
    fill: none;
}

.widgetGauge.participation path.data-peak
{
    stroke: red;
}

.widgetGauge.participation path.data-arc
{
    stroke: #3498db;
}

/* -------------- */
/* chart dialog box */

dialog
{
    display: none;
    position: absolute;
    top: 10%;
    left: 5%;
    width: 80%;
    background: white;
    border: 1px solid grey;
    border-radius: 0 .5em .5em;
    z-index: 1002;
    padding: .5em 1em;
    height: 80%;
}

dialog[open="open"]
{
    display: block;
}

dialog::backdrop, #backdrop
{
    /* Ebene zwischen Hintergrund und Dialog-Box, Pseudoelement noch nicht implementiert */

    position: fixed;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background-color: rgba(0, 0, 0, 0.5);
}

/* -------------- */
/* Media specials*/

@media only screen and (min-width: 900px)
{
}

@media only screen and (min-width: 768px) and (max-width:1139px)
{
}

@media only screen and (max-width: 740px)
{
    .daemonState               { width: 88%; }
    .menu                      { margin: 0px; }
    .button1                   { margin: 1px; }
    .inputTableConfig > div:nth-child(odd) { background-color: var(--light3); }
    .inputTableConfig > div > span:nth-child(3) { width: 25%; }
    .inputTableConfig > div > span              { width: 30%; }
    .buttonDashboard           { margin: 1px 0px 1px 0px; }
    .menuDashboard             { margin: 2px; }
    .widgetContainer > div     { width: 180px; height: 160px; }
    .widgetGauge               { grid-template-rows: 30% 70%; }
    .widget                    { grid-template-rows: 30% 66% 4%; }
    .widgetChart               { grid-template-rows: 30% 20% 50%; }
    .widget-title              { font-size: 1.2em; }
    .widget-value              { font-size: 1.3em; }
}

@media only screen and (max-width: 375px)
{
    .widgetContainer > div     { width: 153px; padding: 0px; margin: 0px; }
}

